<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Android Async Http Samples</string>

    <string name="field_username">Username</string>
    <string name="field_password">Password</string>

    <string name="button_run">Run</string>
    <string name="button_cancel">Cancel</string>

    <string name="label_headers">Headers (key=val, one per line)</string>
    <string name="label_req_body">Request body</string>
    <string name="label_credentials">Server requests authentication.\nTo gain access, enter:\n\nUsername: %1$s\nPassword: %2$s</string>

    <string name="title_get_sample">GET</string>
    <string name="title_json_sample">GET JSON and parse it</string>
    <string name="title_json_streamer_sample">POST JSON using streamer</string>
    <string name="title_post_sample">POST</string>
    <string name="title_put_sample">PUT</string>
    <string name="title_delete_sample">DELETE</string>
    <string name="title_file_sample">GET to File</string>
    <string name="title_binary_sample">GET binary data</string>
    <string name="title_cancel_all">Cancel all requests</string>
    <string name="title_sax_example">SAX Example</string>
    <string name="title_cancel_handle">Cancel request handle</string>
    <string name="title_synchronous">Synchronous GET request</string>
    <string name="title_threading_timeout">Threading timeouts</string>
    <string name="title_gzip_sample">GET Gzipped JSON and parse it</string>
    <string name="title_intent_service_sample">IntentService Synchronised Request</string>
    <string name="title_post_files">Post Multipart-encoded files</string>
    <string name="title_redirect_302">302 Redirect handling</string>
    <string name="title_persistent_cookies">Handling persistent cookies</string>
    <string name="title_custom_ca">Custom CA Example</string>
    <string name="title_retry_handler">Retrying requests by Exception</string>
    <string name="title_range_sample">Range response handling</string>
    <string name="title_401_unauth">401 basic authentication</string>
    <string name="title_pre_post_processing">Pre-/Post-processing</string>
    <string name="title_async_background_thread">Async on background thread</string>
    
    <!-- strings of app -->
    <string name="hg_logo">行业管理项目</string>
    <string name="hg_back">返回</string>
    <string name="hg_default_result">无信息</string>
    <!-- hg_rs002_001 login -->
    <string name="hg_username">用户名:</string>
    <string name="hg_username_hint">请输入用户名</string>
    <string name="hg_pwd">密码:</string>
    <string name="hg_pwd_hint">请输入密码</string>
    <string name="hg_remember_me"></string>
    <string name="hg_login">登录</string>
    <string name="hg_cancle">取消</string>
    <string name="hg_verification_code">验证码:</string>
    <string name="hg_verification_code_hint">点击图片可刷新</string>
    <string name="hg_logout">退出</string>
    <string name="hg_demo_current_user">当前用户:admin</string>
    
    <string name="hg_RS002_002">企业信息查询</string>
    <string name="hg_2_hint_com_name">请输入企业名称</string>
    <string name="hg_2_hint_com_addr">请输入企业地址</string>
    <string name="hg_2_hint_com_type">请输入企业类型</string>
    <string name="hg_2_text_query">查询</string>
    <string name="hg_2_text_result">企业信息查询结果</string>
    
    <string name="hg_RS002_003">企业申请开业\n现场勘查管理</string>
    <string name="hg_3_hint_com_name">请输入申请开业现场勘查企业名称</string>
	<string name="hg_3_start_inspect">开始现场勘查</string>
	<string name="hg_3_obtain_evidence">取证</string>
	
	<string name="hg_3_take_picture">拍照</string>
	<string name="hg_3_tape">录音</string>
	<string name="hg_3_pre_step">上一步</string>
	<string name="hg_3_next_step">下一步</string>
    <string name="hg_3_abandon">放弃</string>
	<string name="hg_3_confirm">确定</string>
	<string name="hg_3_inpsection_res_review">勘察结果总览</string>
	
    <string name="hg_RS002_004">企业现场监管检查</string>
    <string name="hg_RS002_005">维修质量纠纷\n现场取证</string>
    <string name="hg_5_car_info">请输入汽车信息</string>
    <string name="hg_5_record">录像</string>
    <string name="hg_5_save">保存</string>
    
    <string name="hg_RS002_006">检查任务派送单</string>
    <string name="hg_RS002_007">信息查询</string>
    <string name="hg_7_car_brand">车辆品牌</string>
    <string name="hg_7_hint_car_brand">请输入车辆品牌</string>
    <string name="hg_7_car_type">车辆类型</string>
    <string name="hg_7_hint_car_type">请输入车辆类型</string>
    <string name="hg_7_text_result">二级维护信息查询结果</string>
    
    
    <string name="hg_RS002_008">打印</string>
    <string name="hg_8_print">打印</string>
</resources>
