<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_darker_bottom"
    android:orientation="vertical" >

    <include
        android:id="@+id/ll_qyxxcx_header"
        layout="@layout/header" />

    <EditText
        android:id="@+id/et_com_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/ll_qyxxcx_header"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_2_hint_com_name" />

    <EditText
        android:id="@+id/et_com_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/et_com_name"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_2_hint_com_addr" />

    <EditText
        android:id="@+id/et_com_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/et_com_address"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_2_hint_com_type" />

    <Button
        android:id="@+id/bt_query"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_normal"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dip"
        android:background="@color/main_blue"
        android:text="@string/hg_2_text_query"
        android:textColor="@color/white_100" />

</RelativeLayout>