<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_darker_bottom"
    android:orientation="vertical" >

    <include
        android:id="@+id/ll_xckc_header"
        layout="@layout/header" />

    <TextView
        android:id="@+id/tv_xcqz_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_xckc_header"
        android:gravity="center"
        android:text="现场取证"
        android:textColor="@color/darker_grey"
        android:textSize="@dimen/h1" />

    <TextView
        android:id="@+id/tv_input_com_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_xcqz_title"
        android:text="请输入企业信息:"
        android:textColor="@color/darker_grey"
        android:textSize="@dimen/h2" />

    <EditText
        android:id="@+id/et_com_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/tv_input_com_tips"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_2_hint_com_name" />

    <EditText
        android:id="@+id/et_com_address"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/et_com_name"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_2_hint_com_addr" />

    <EditText
        android:id="@+id/et_com_type"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/et_com_address"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_2_hint_com_type" />

    <TextView
        android:id="@+id/tv_input_car_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_com_type"
        android:layout_marginTop="5dip"
        android:text="请输入汽车信息:"
        android:textColor="@color/darker_grey"
        android:textSize="@dimen/h2" />

    <EditText
        android:id="@+id/et_car_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/tv_input_car_tips"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_5_car_info" />

    <LinearLayout
        android:id="@id/ll_btns"
        style="@android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_header"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/bt_take_picture"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:text="@string/hg_3_take_picture"
            android:textColor="@color/white_100" />

        <include layout="@layout/devider_vertical" />

        <Button
            android:id="@+id/bt_tape"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:text="@string/hg_3_tape"
            android:textColor="@color/white_100" />

        <include layout="@layout/devider_vertical" />

        <Button
            android:id="@+id/bt_xcqz_print"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:text="@string/hg_8_print"
            android:textColor="@color/white_100" />

        <include layout="@layout/devider_vertical" />

        <Button
            android:id="@+id/bt_save"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:text="@string/hg_5_save"
            android:textColor="@color/white_100" />
    </LinearLayout>

</RelativeLayout>