<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_darker_bottom"
    android:orientation="vertical" >

    <include
        android:id="@+id/ll_xckc_header"
        layout="@layout/header" />

    <EditText
        android:id="@+id/et_xckc_com_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:layout_below="@id/ll_xckc_header"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="5dip"
        android:background="@color/white_100"
        android:hint="@string/hg_3_hint_com_name" />

    <TextView
        android:id="@+id/tv_com_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/hg_default_result"
        android:textColor="@color/darker_grey"
        android:textSize="@dimen/h2" />

    <LinearLayout
        android:id="@+id/ll_btns"
        style="@android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_button_normal"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/bt_start_inspect"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:text="@string/hg_3_start_inspect"
            android:textColor="@color/white_100" />

        <include layout="@layout/devider_vertical" />

        <Button
            android:id="@+id/bt_back"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/main_blue"
            android:text="@string/hg_back"
            android:textColor="@color/white_100" />
    </LinearLayout>

</RelativeLayout>